about section changed

--- a/index.html
+++ b/index.html
@@ -57,3 +57,14 @@
         <ion-icon class="bars" name="menu-outline"></ion-icon>
     </button>
 </nav>
+
+<section class="hero" id="about">
+    <img src="assets/images/wfh_1.svg" alt="rupesh-shrestha" loading="lazy" class="hero-img" />
+    <div class="bio animate_animated animate_shakeX">
+        <h2 class="bio-title">About Me</h2>
+        <p class="bio-text">
+            Thank you for scrolling down over my profile.. <br> Hi, my name is Rupesh. Seeking a position to utilise my skills and abilities and achieve professional growth while being resourceful, innovative and flexible. To add valuable assets to your
+            esteemed organisation as an active member.
+        </p>
+    </div>
+</section>
