More about section initialization

--- a/index.html
+++ b/index.html
@@ -68,3 +68,15 @@
         </p>
     </div>
 </section>
+
+
+<section class="more-about">
+    <h2>More About Me</h2><br>
+    <p> I am very enthusiastic about how software plays a crucial role in this modern digital age. It always motivates me to work hard to bring a meaningful change in the lifestyles of people through software. I have a great passion to thrive my career, with
+        my problem solving eagerness, along with never ending hungriness to learn and dive deep.
+    </p><br>
+    <p>
+        I am looking for an organisation where I can apply and enhance my knowledge and explore the industry and work smart to make purposeful changes for the community. I am currently seeking an opportunity as a Software Development/ Programmer internship role
+        to apply my knowledge and experience as well as pursue my career goal.
+    </p>
+</section>
