added contact, project details

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" />
+<html lang="en">
 
 <head>
     <meta charset="UTF-8" />
@@ -64,7 +64,7 @@
         <h2 class="bio-title">About Me</h2>
         <p class="bio-text">
             Thank you for scrolling down over my profile.. <br> Hi, my name is Rupesh. Seeking a position to utilise my skills and abilities and achieve professional growth while being resourceful, innovative and flexible. To add valuable assets to your
-            esteemed organisation as an active member.
+            esteemed organization as an active member.
         </p>
     </div>
 </section>
@@ -79,4 +79,72 @@
         I am looking for an organisation where I can apply and enhance my knowledge and explore the industry and work smart to make purposeful changes for the community. I am currently seeking an opportunity as a Software Development/ Programmer internship role
         to apply my knowledge and experience as well as pursue my career goal.
     </p>
+</section>
+
+<section class="skills" id="skills">
+    <h2 class="skill-header">My Top Skills</h2>
+    <div class="skills-wrapper">
+        <div class="first-set animate_animated animate_pulse">
+            <img src="assets/icons/icons8-html-5.svg" alt="" loading="lazy" class="icon icon-card" />
+            <img src="assets/icons/icons8-css3.svg" alt="" loading="lazy" class="icon icon-card" />
+            <img src="assets/icons/icons8-javascript.svg" alt="" loading="lazy" class="icon icon-card" />
+        </div>
+        <div class="second-set animate__animated animate__pulse">
+            <img src="assets/icons/icons8-bootstrap.svg" alt="" loading="lazy" class="icon icon-card" />
+            <img src="assets/icons/icons8-react-native.svg" alt="" loading="lazy" class="icon icon-card" />
+            <img src="assets/icons/icons8-git.svg" alt="" loading="lazy" class="icon icon-card" />
+        </div>
+    </div>
+</section>
+
+<section class="projects" id="projects">
+    <h2 class="projects-title">Some of my Recent Projects</h2>
+    <div class="projects-container">
+        <div class="project-container project-card">
+            <img src="assets/images/expenseTracker.png" alt="semi-automatic-robo" loading="lazy" class="project-pic" />
+            <h3 class="project-title">Semi automatic Tennis ball collector Robot</h3>
+            <p class="project-details">
+                Robot moves around the tennis court and collects only tennis balls from the court, and depost the collected tennis balls in the collection.
+            </p>
+            <a href="#" target="_blank" class="project-link"> Check it Out</a>
+        </div>
+        <div class="project-container project-card">
+            <img src="assets/images/netflixClone.png" alt="Contact Tracing" loading="lazy" class="project-pic" />
+            <h3 class="project-title">Contact Tracing</h3>
+            <p class="project-details">
+                This project was more about documentation and research, where we worked on discovering those bugs where people were concerned at it drew very quick attention to the public because of privacy.
+            </p>
+            <a href="#" target="_blank" class="project-link"> Check it Out</a>
+        </div>
+        <div class="project-container project-card">
+            <img src="assets/images/greenyEarth.png" alt="No physical contact in the lift" loading="lazy" class="project-pic" />
+            <h3 class="project-title">Reduced physical contact in lift</h3>
+            <p class="project-details">
+                This project was more based on documentation, where our team was assigned a task to develop a lift where users have minimum/ no physical contact with the lift.
+            </p>
+            <a href="#" target="_blank" class="project-link">Check it Out</a>
+        </div>
+    </div>
+</section>
+
+<section class="contact" id="contact">
+    <h2>Get In Touch With Me</h2>
+    <div class="contact-form-container">
+        <div class="contact-form">
+            <form action="https://formspree.io/f/mzboegrn" method="POST">
+                <div class="form-control">
+                    <label for="name">Name</label>
+                    <input type="text" id="name" name="sender-name" placeholder="Enter your Name" class="input-field" required />
+                </div>
+                <div class="form-control">
+                    <label for="email">Email</label>
+                    <input type="email" id="email" name="sender-email" placeholder="Enter Your Email" class="input-field" required />
+                </div>
+                <div class="form-control">
+                    <textarea id="message" cols="60" rows="10" placeholder="Enter Your Message" name="message" class="input-field" required></textarea>
+                </div>
+                <input type="submit" value="Submit" id="submit-btn" class="submit-btn" />
+            </form>
+        </div>
+    </div>
 </section>
