--- a/index.html
+++ b/index.html
@@ -21,130 +21,157 @@
 
 <body>
     <!--Navbar-->
+    <nav>
+        <h1>Rupesh Shrestha</h1>
+        <ul class="navigation">
+            <li><a href="#about" class="nav-link">About</a></li>
+            <li><a href="#skills" class="nav-link">Skills</a></li>
+            <li><a href="#projects" class="nav-link">Projects</a></li>
+            <li><a href="#contact" class="nav-link">Contact</a></li>
+        </ul>
+        <button class="burger-menu" id="burger-menu">
+        <ion-icon class="bars" name="menu-outline"></ion-icon>
+
+    <!-- <ion-icon class="times" name="close-outline"></ion-icon> -->
+    </button>
+    </nav>
 
     <!--Hero Section-->
 
+    <section class="hero" id="about">
+        <img src="assets/images/wfh_1.svg" alt="rupesh-shrestha" loading="lazy" class="hero-img" />
+        <div class="bio animate_animated animate_shakeX">
+            <h2 class="bio-title">About Me</h2>
+            <p class="bio-text">
+                Thank you for scrolling down over my profile.. <br> Hi, my name is Rupesh. Seeking a position to utilise my skills and abilities and achieve professional growth while being resourceful, innovative and flexible. To add valuable assets to
+                your esteemed organization as an active member.
+            </p>
+        </div>
+    </section>
+
     <!--More About-->
+    <section class="more-about">
+        <h2>More About Me</h2><br>
+        <p> I am very enthusiastic about how software plays a crucial role in this modern digital age. It always motivates me to work hard to bring a meaningful change in the lifestyles of people through software. I have a great passion to thrive my career,
+            with my problem solving eagerness, along with never ending hungriness to learn and dive deep.
+        </p><br>
+        <p>
+            I am looking for an organisation where I can apply and enhance my knowledge and explore the industry and work smart to make purposeful changes for the community. I am currently seeking an opportunity as a Software Development/ Programmer internship role
+            to apply my knowledge and experience as well as pursue my career goal.
+        </p>
+    </section>
 
     <!--Skills section-->
+    <section class="skills" id="skills">
+        <h2 class="skill-header">My Top Skills</h2>
+        <div class="skills-wrapper">
+            <div class="first-set animate_animated animate_pulse">
+                <img src="assets/icons/icons8-html-5.svg" alt="" loading="lazy" class="icon icon-card" />
+                <img src="assets/icons/icons8-css3.svg" alt="" loading="lazy" class="icon icon-card" />
+                <img src="assets/icons/icons8-javascript.svg" alt="" loading="lazy" class="icon icon-card" />
+            </div>
+            <div class="second-set animate__animated animate__pulse">
+                <img src="assets/icons/icons8-bootstrap.svg" alt="" loading="lazy" class="icon icon-card" />
+                <img src="assets/icons/icons8-react-native.svg" alt="" loading="lazy" class="icon icon-card" />
+                <img src="assets/icons/icons8-git.svg" alt="" loading="lazy" class="icon icon-card" />
+            </div>
+        </div>
+    </section>
 
     <!--Projects section-->
+    <section class="projects" id="projects">
+        <h2 class="projects-title">Some of my Recent Projects</h2>
+        <div class="projects-container">
+            <div class="project-container project-card">
+                <img src="assets/images/expenseTracker.png" alt="semi-automatic-robo" loading="lazy" class="project-pic" />
+                <h3 class="project-title">Semi automatic Tennis ball collector Robot</h3>
+                <p class="project-details">
+                    Robot moves around the tennis court and collects only tennis balls from the court, and depost the collected tennis balls in the collection.
+                </p>
+                <a href="#" target="_blank" class="project-link"> Check it Out</a>
+            </div>
+            <div class="project-container project-card">
+                <img src="assets/images/netflixClone.png" alt="Contact Tracing" loading="lazy" class="project-pic" />
+                <h3 class="project-title">Contact Tracing</h3>
+                <p class="project-details">
+                    This project was more about documentation and research, where we worked on discovering those bugs where people were concerned at it drew very quick attention to the public because of privacy.
+                </p>
+                <a href="#" target="_blank" class="project-link"> Check it Out</a>
+            </div>
+            <div class="project-container project-card">
+                <img src="assets/images/greenyEarth.png" alt="No physical contact in the lift" loading="lazy" class="project-pic" />
+                <h3 class="project-title">Reduced physical contact in lift</h3>
+                <p class="project-details">
+                    This project was more based on documentation, where our team was assigned a task to develop a lift where users have minimum/ no physical contact with the lift.
+                </p>
+                <a href="#" target="_blank" class="project-link">Check it Out</a>
+            </div>
+        </div>
+    </section>
 
     <!--Contact section-->
+    <section class="contact" id="contact">
+        <h2>Get In Touch With Me</h2>
+        <div class="contact-form-container">
+            <div class="contact-form">
+                <form action="https://formspree.io/f/mzboegrn" method="POST">
+                    <div class="form-control">
+                        <label for="name">Name</label>
+                        <input type="text" id="name" name="sender-name" placeholder="Enter your Name" class="input-field" required />
+                    </div>
+                    <div class="form-control">
+                        <label for="email">Email</label>
+                        <input type="email" id="email" name="sender-email" placeholder="Enter Your Email" class="input-field" required />
+                    </div>
+                    <div class="form-control">
+                        <textarea id="message" cols="60" rows="10" placeholder="Enter Your Message" name="message" class="input-field" required></textarea>
+                    </div>
+                    <input type="submit" value="Submit" id="submit-btn" class="submit-btn" />
+                </form>
+            </div>
+        </div>
+    </section>
 
     <!--Social accounts - Fixed to the right-->
+    <div class="socials">
+        <a href="#" target="_blank">
+            <img src="assets/icons/icons8-twitter-circled.gif" alt="Twitter" loading="lazy" class="socicon" />
+        </a>
+        <a href="#" target="_blank">
+            <img src="assets/icons/icons8-instagram.gif" alt="Instagram" loading="lazy" class="socicon" />
+        </a>
+        <a href="#" target="_blank"><img src="assets/icons/icons8-linkedin-circled.gif" alt="Linkedin" loading="lazy" class="socicon" />
+        </a>
+        <a href="#" target="_blank">
+            <img src="assets/icons/icons8-github.gif" alt="Github" class="socicon" />
+        </a>
+    </div>
 
-    <!--Scroll to top-->
+    <!--Scroll to top (needs to be fixed)-->
+    <i class="scroll-up" id="scroll-up">
+        <img
+        src="assets/icons/icons8-upward-arrow.gif"
+        class="socicon up-arrow"
+        alt="scroll-up"
+        />
+    </i>
 
     <!--Footer section-->
+    <footer>
+        <p class="copy" &copy; Copyright 2021></p>
+        <p class="copy">
+            Built with &#x2661; by
+            <a href="https://twitter.com/lostincrowd451" target="_blank">Rupesh Shrestha (lostincrowd451) </a>
+        </p>
+    </footer>
+
 
     <!--Website Section-->
+
+
+    <!--Ion icons scripts-->
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
 
 </html>
-
-<nav>
-    <h1>Rupesh Shrestha</h1>
-    <ul class="navigation">
-        <li><a href="#about" class="nav-link">About</a></li>
-        <li><a href="#skills" class="nav-link">Skills</a></li>
-        <li><a href="#projects" class="nav-link">Projects</a></li>
-        <li><a href="#contacts" class="nav-link">Contact</a></li>
-    </ul>
-    <button class="burger-menu" id="burger-menu">
-        <ion-icon class="bars" name="menu-outline"></ion-icon>
-    </button>
-</nav>
-
-<section class="hero" id="about">
-    <img src="assets/images/wfh_1.svg" alt="rupesh-shrestha" loading="lazy" class="hero-img" />
-    <div class="bio animate_animated animate_shakeX">
-        <h2 class="bio-title">About Me</h2>
-        <p class="bio-text">
-            Thank you for scrolling down over my profile.. <br> Hi, my name is Rupesh. Seeking a position to utilise my skills and abilities and achieve professional growth while being resourceful, innovative and flexible. To add valuable assets to your
-            esteemed organization as an active member.
-        </p>
-    </div>
-</section>
-
-
-<section class="more-about">
-    <h2>More About Me</h2><br>
-    <p> I am very enthusiastic about how software plays a crucial role in this modern digital age. It always motivates me to work hard to bring a meaningful change in the lifestyles of people through software. I have a great passion to thrive my career, with
-        my problem solving eagerness, along with never ending hungriness to learn and dive deep.
-    </p><br>
-    <p>
-        I am looking for an organisation where I can apply and enhance my knowledge and explore the industry and work smart to make purposeful changes for the community. I am currently seeking an opportunity as a Software Development/ Programmer internship role
-        to apply my knowledge and experience as well as pursue my career goal.
-    </p>
-</section>
-
-<section class="skills" id="skills">
-    <h2 class="skill-header">My Top Skills</h2>
-    <div class="skills-wrapper">
-        <div class="first-set animate_animated animate_pulse">
-            <img src="assets/icons/icons8-html-5.svg" alt="" loading="lazy" class="icon icon-card" />
-            <img src="assets/icons/icons8-css3.svg" alt="" loading="lazy" class="icon icon-card" />
-            <img src="assets/icons/icons8-javascript.svg" alt="" loading="lazy" class="icon icon-card" />
-        </div>
-        <div class="second-set animate__animated animate__pulse">
-            <img src="assets/icons/icons8-bootstrap.svg" alt="" loading="lazy" class="icon icon-card" />
-            <img src="assets/icons/icons8-react-native.svg" alt="" loading="lazy" class="icon icon-card" />
-            <img src="assets/icons/icons8-git.svg" alt="" loading="lazy" class="icon icon-card" />
-        </div>
-    </div>
-</section>
-
-<section class="projects" id="projects">
-    <h2 class="projects-title">Some of my Recent Projects</h2>
-    <div class="projects-container">
-        <div class="project-container project-card">
-            <img src="assets/images/expenseTracker.png" alt="semi-automatic-robo" loading="lazy" class="project-pic" />
-            <h3 class="project-title">Semi automatic Tennis ball collector Robot</h3>
-            <p class="project-details">
-                Robot moves around the tennis court and collects only tennis balls from the court, and depost the collected tennis balls in the collection.
-            </p>
-            <a href="#" target="_blank" class="project-link"> Check it Out</a>
-        </div>
-        <div class="project-container project-card">
-            <img src="assets/images/netflixClone.png" alt="Contact Tracing" loading="lazy" class="project-pic" />
-            <h3 class="project-title">Contact Tracing</h3>
-            <p class="project-details">
-                This project was more about documentation and research, where we worked on discovering those bugs where people were concerned at it drew very quick attention to the public because of privacy.
-            </p>
-            <a href="#" target="_blank" class="project-link"> Check it Out</a>
-        </div>
-        <div class="project-container project-card">
-            <img src="assets/images/greenyEarth.png" alt="No physical contact in the lift" loading="lazy" class="project-pic" />
-            <h3 class="project-title">Reduced physical contact in lift</h3>
-            <p class="project-details">
-                This project was more based on documentation, where our team was assigned a task to develop a lift where users have minimum/ no physical contact with the lift.
-            </p>
-            <a href="#" target="_blank" class="project-link">Check it Out</a>
-        </div>
-    </div>
-</section>
-
-<section class="contact" id="contact">
-    <h2>Get In Touch With Me</h2>
-    <div class="contact-form-container">
-        <div class="contact-form">
-            <form action="https://formspree.io/f/mzboegrn" method="POST">
-                <div class="form-control">
-                    <label for="name">Name</label>
-                    <input type="text" id="name" name="sender-name" placeholder="Enter your Name" class="input-field" required />
-                </div>
-                <div class="form-control">
-                    <label for="email">Email</label>
-                    <input type="email" id="email" name="sender-email" placeholder="Enter Your Email" class="input-field" required />
-                </div>
-                <div class="form-control">
-                    <textarea id="message" cols="60" rows="10" placeholder="Enter Your Message" name="message" class="input-field" required></textarea>
-                </div>
-                <input type="submit" value="Submit" id="submit-btn" class="submit-btn" />
-            </form>
-        </div>
-    </div>
-</section>
