--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
     <title>Rupesh Shrestha | Software Engineer</title>
 </head>
 
+
 <body>
     <!--Navbar-->
     <nav>
-        <h1>Rupesh Shrestha</h1>
+        <h1>Rupesh Shrestha (WORK ON PROGRESS)</h1>
         <ul class="navigation">
             <li><a href="#about" class="nav-link">About</a></li>
             <li><a href="#skills" class="nav-link">Skills</a></li>
@@ -35,11 +36,10 @@
     <!-- <ion-icon class="times" name="close-outline"></ion-icon> -->
     </button>
     </nav>
-
     <!--Hero Section-->
 
     <section class="hero" id="about">
-        <img src="assets/images/wfh_1.svg" alt="rupesh-shrestha" loading="lazy" class="hero-img" />
+        <img src="assets/images/ppp.svg" alt="rupesh-shrestha" loading="lazy" class="hero-img" />
         <div class="bio animate_animated animate_shakeX">
             <h2 class="bio-title">About Me</h2>
             <p class="bio-text">
@@ -83,7 +83,7 @@
         <h2 class="projects-title">Some of my Recent Projects</h2>
         <div class="projects-container">
             <div class="project-container project-card">
-                <img src="assets/images/expenseTracker.png" alt="semi-automatic-robo" loading="lazy" class="project-pic" />
+                <img src="assets/images/robo.jpg" alt="semi-automatic-robo" loading="lazy" class="project-pic" />
                 <h3 class="project-title">Semi automatic Tennis ball collector Robot</h3>
                 <p class="project-details">
                     Robot moves around the tennis court and collects only tennis balls from the court, and depost the collected tennis balls in the collection.
@@ -91,7 +91,7 @@
                 <a href="#" target="_blank" class="project-link"> Check it Out</a>
             </div>
             <div class="project-container project-card">
-                <img src="assets/images/netflixClone.png" alt="Contact Tracing" loading="lazy" class="project-pic" />
+                <img src="assets/images/contact.jpg" alt="Contact Tracing" loading="lazy" class="project-pic" />
                 <h3 class="project-title">Contact Tracing</h3>
                 <p class="project-details">
                     This project was more about documentation and research, where we worked on discovering those bugs where people were concerned at it drew very quick attention to the public because of privacy.
@@ -99,8 +99,8 @@
                 <a href="#" target="_blank" class="project-link"> Check it Out</a>
             </div>
             <div class="project-container project-card">
-                <img src="assets/images/greenyEarth.png" alt="No physical contact in the lift" loading="lazy" class="project-pic" />
-                <h3 class="project-title">Reduced physical contact in lift</h3>
+                <img src="assets/images/lift.jpg" alt="No physical contact in the lift" loading="lazy" class="project-pic" />
+                <h3 class="project-title">Contactless lift</h3>
                 <p class="project-details">
                     This project was more based on documentation, where our team was assigned a task to develop a lift where users have minimum/ no physical contact with the lift.
                 </p>
@@ -134,27 +134,25 @@
 
     <!--Social accounts - Fixed to the right-->
     <div class="socials">
-        <a href="#" target="_blank">
+        <a href="https://twitter.com/lostincrowd451" target="_blank">
             <img src="assets/icons/icons8-twitter-circled.gif" alt="Twitter" loading="lazy" class="socicon" />
         </a>
         <a href="#" target="_blank">
-            <img src="assets/icons/icons8-instagram.gif" alt="Instagram" loading="lazy" class="socicon" />
+            <img src="assets/icons/icons8-facebook.gif" alt="facebook" loading="lazy" class="socicon" />
         </a>
-        <a href="#" target="_blank"><img src="assets/icons/icons8-linkedin-circled.gif" alt="Linkedin" loading="lazy" class="socicon" />
+        <a href="https://www.linkedin.com/in/rupesh-shrestha-2a3b591a2/" target="_blank"><img src="assets/icons/icons8-linkedin-circled.gif" alt="Linkedin" loading="lazy" class="socicon" />
         </a>
-        <a href="#" target="_blank">
+        <a href="https://github.com/rupesh110" target="_blank">
             <img src="assets/icons/icons8-github.gif" alt="Github" class="socicon" />
         </a>
     </div>
 
-    <!--Scroll to top (needs to be fixed)-->
-    <i class="scroll-up" id="scroll-up">
-        <img
-        src="assets/icons/icons8-upward-arrow.gif"
-        class="socicon up-arrow"
-        alt="scroll-up"
-        />
-    </i>
+    <!-- Scroll to top -->
+    <i class="scroll-up" id="scroll-up"><img
+   src="assets/icons/icons8-upward-arrow.gif"
+   class="socicon up-arrow"
+   alt=""
+/></i>
 
     <!--Footer section-->
     <footer>
@@ -167,7 +165,7 @@
 
 
     <!--Website Section-->
-
+    <script src="assets/js/app.js"></script>
 
     <!--Ion icons scripts-->
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
