--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
                 <img src="assets/icons/icons8-javascript.svg" alt="" loading="lazy" class="icon icon-card" />
             </div>
             <div class="second-set animate__animated animate__pulse">
-                <img src="assets/icons/icons8-bootstrap.svg" alt="" loading="lazy" class="icon icon-card" />
-                <img src="assets/icons/icons8-react-native.svg" alt="" loading="lazy" class="icon icon-card" />
+                <img src="assets/icons/java.svg" alt="" loading="lazy" class="icon icon-card" />
+                <img src="assets/icons/icons8-python.svg" alt="" loading="lazy" class="icon icon-card" />
                 <img src="assets/icons/icons8-git.svg" alt="" loading="lazy" class="icon icon-card" />
             </div>
         </div>
@@ -122,7 +122,7 @@
                     <div class="form-control">
                         <label for="email">Email</label>
                         <input type="email" id="email" name="sender-email" placeholder="Enter Your Email" class="input-field" required />
-                    </div>
+                    </div><br>
                     <div class="form-control">
                         <textarea id="message" cols="60" rows="10" placeholder="Enter Your Message" name="message" class="input-field" required></textarea>
                     </div>
@@ -137,7 +137,7 @@
         <a href="https://twitter.com/lostincrowd451" target="_blank">
             <img src="assets/icons/icons8-twitter-circled.gif" alt="Twitter" loading="lazy" class="socicon" />
         </a>
-        <a href="#" target="_blank">
+        <a href="https://www.facebook.com/rupesh.shrestha.90260" target="_blank">
             <img src="assets/icons/icons8-facebook.gif" alt="facebook" loading="lazy" class="socicon" />
         </a>
         <a href="https://www.linkedin.com/in/rupesh-shrestha-2a3b591a2/" target="_blank"><img src="assets/icons/icons8-linkedin-circled.gif" alt="Linkedin" loading="lazy" class="socicon" />
