--- a/index.html
+++ b/index.html
@@ -52,12 +52,13 @@
     <!--More About-->
     <section class="more-about">
         <h2>More About Me</h2><br>
-        <p> I am very enthusiastic about how software plays a crucial role in this modern digital age. It always motivates me to work hard to bring a meaningful change in the lifestyles of people through software. I have a great passion to thrive my career,
-            with my problem solving eagerness, along with never ending hungriness to learn and dive deep.
+        <p> Enthusiastic about software and its role in this technological era and committed to acknowledge dominance of software in this modern digital age. It has always motivated and self-driven me to dedicate myself to bring a weighty change in the lifestyles
+            of people through software.
         </p><br>
         <p>
-            I am looking for an organisation where I can apply and enhance my knowledge and explore the industry and work smart to make purposeful changes for the community. I am currently seeking an opportunity as a Software Development/ Programmer internship role
-            to apply my knowledge and experience as well as pursue my career goal.
+            I am looking for an company where I can apply and enhance my knowledge and explore the industry and work smart to make purposeful changes for the community. I am currently seeking an opportunity as a Software Development/ Programmer internship role to
+            apply my knowledge and experience as well as pursue my career goal. I want invest my time where I can work along side with like-minded and smart people as a team to bring a positive and purposeful impact in the community with my strong problem
+            solving passion.
         </p>
     </section>
 
