--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
         <div class="bio animate_animated animate_shakeX">
             <h2 class="bio-title">About Me</h2>
             <p class="bio-text">
-                Thank you for scrolling down over my profile.. <br> Hi, my name is Rupesh. Seeking a position to utilise my skills and abilities and achieve professional growth while being resourceful, innovative and flexible. To add valuable assets to
-                your esteemed organization as an active member.
+                Thank you for scrolling down over my profile.. <br> Hello 👋👋👋. Seeking a position to utilise my skills and abilities and achieve professional growth while being resourceful, innovative and flexible. To add valuable assets to your esteemed
+                organization as an active member.
             </p>
         </div>
     </section>
