--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
         <div class="bio animate_animated animate_shakeX">
             <h2 class="bio-title">About Me</h2>
             <p class="bio-text">
-                Thank you for scrolling down over my profile.. <br> Hello 👋👋👋. Seeking a position to utilise my skills and abilities and achieve professional growth while being resourceful, innovative and flexible. To add valuable assets to your esteemed
-                organization as an active member.
+                Thank you for scrolling down over my profile.. <br> Hello 👋👋👋. Enthusiastic about software and its role in this technological era and committed to acknowledge dominance of software in this modern digital age. It has always motivated
+                and self-driven me to dedicate myself to bring a weighty change in the lifestyles of people through software.
+
             </p>
         </div>
     </section>
@@ -52,8 +53,7 @@
     <!--More About-->
     <section class="more-about">
         <h2>More About Me</h2><br>
-        <p> Enthusiastic about software and its role in this technological era and committed to acknowledge dominance of software in this modern digital age. It has always motivated and self-driven me to dedicate myself to bring a weighty change in the lifestyles
-            of people through software.
+        <p> Seeking a position to utilise my skills and abilities and achieve professional growth while being resourceful, innovative and flexible. To add valuable assets to your esteemed organization as an active member.
         </p><br>
         <p>
             I am looking for an company where I can apply and enhance my knowledge and explore the industry and work smart to make purposeful changes for the community. I am currently seeking an opportunity as a Software Development/ Programmer internship role to
