Updated twitter username

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         <p class="copy" &copy; Copyright 2021></p>
         <p class="copy">
             Built with &#x2661; by
-            <a href="https://twitter.com/lostincrowd451" target="_blank">Rupesh Shrestha (lostincrowd451) </a>
+            <a href="https://twitter.com/lostincrowd451" target="_blank">Rupesh Shrestha (Rupesh_shrestha) </a>
         </p>
     </footer>
 
