--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
     <!--Navbar-->
     <nav>
-        <h1>Rupesh Shrestha (WORK ON PROGRESS)</h1>
+        <h1>Rupesh Shrestha</h1>
         <ul class="navigation">
             <li><a href="#about" class="nav-link">About</a></li>
             <li><a href="#skills" class="nav-link">Skills</a></li>
