--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <h1>Rupesh Shrestha</h1>
         <ul class="navigation">
             <li><a href="#about" class="nav-link">About</a></li>
+            <li><a href="education" class="nav-link">Education</a></li>
             <li><a href="#skills" class="nav-link">Skills</a></li>
             <li><a href="#projects" class="nav-link">Projects</a></li>
             <li><a href="#contact" class="nav-link">Contact</a></li>
@@ -45,7 +46,6 @@
             <p class="bio-text">
                 Thank you for scrolling down over my profile.. <br> Hello 👋👋👋. Enthusiastic about software and its role in this technological era and committed to acknowledge dominance of software in this modern digital age. It has always motivated
                 and self-driven me to dedicate myself to bring a weighty change in the lifestyles of people through software.
-
             </p>
         </div>
     </section>
@@ -61,6 +61,17 @@
             solving passion.
         </p>
     </section>
+
+    <!--Education-->
+    <Section class="education">
+        <h2>Education</h2><br>
+        <h3>BACHELOR OF SOFTWARE ENGINEERING (HONOURS)</h3>
+        <h2><strong>Macquaire University</strong></h2>
+        <p>I studied Software Engineering Honors at Macquaire University. Here, I hva gained strong knowledge a wide variety of topics including data structures, algorithms, programming and project management.</p><br>
+        <h3>DIPLOMA OF INFORMATION TECHNOLOGY</h3>
+        <h2><strong>Macquaire University</strong></h2>
+        <p>I studied Diploma in Information Technology at Macquaire University. Here, I have gained knowledge a wide variety of topics including networking and programming.</p><br>
+    </Section>
 
     <!--Skills section-->
     <section class="skills" id="skills">
