--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <h1>Rupesh Shrestha</h1>
         <ul class="navigation">
             <li><a href="#about" class="nav-link">About</a></li>
-            <li><a href="education" class="nav-link">Education</a></li>
+            <li><a href="#education" class="nav-link">Education</a></li>
             <li><a href="#skills" class="nav-link">Skills</a></li>
             <li><a href="#projects" class="nav-link">Projects</a></li>
             <li><a href="#contact" class="nav-link">Contact</a></li>
