Eudcation section link

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </section>
 
     <!--Education-->
-    <Section class="education">
+    <Section class="education" id="education">
         <h2>Education</h2><br>
         <h3>BACHELOR OF SOFTWARE ENGINEERING (HONOURS)</h3>
         <h2><strong>Macquaire University</strong></h2>
