--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <h2>Education</h2><br>
         <h3>BACHELOR OF SOFTWARE ENGINEERING (HONOURS)</h3>
         <h2><strong>Macquaire University</strong></h2>
-        <p>I studied Software Engineering Honors at Macquaire University. Here, I hva gained strong knowledge a wide variety of topics including data structures, algorithms, programming and project management.</p><br>
+        <p>I studied Software Engineering Honors at Macquaire University. Here, I have gained strong knowledge a wide variety of topics including data structures, algorithms, programming and project management.</p><br>
         <h3>DIPLOMA OF INFORMATION TECHNOLOGY</h3>
         <h2><strong>Macquaire University</strong></h2>
         <p>I studied Diploma in Information Technology at Macquaire University. Here, I have gained knowledge a wide variety of topics including networking and programming.</p><br>
