--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
     <!--Projects section-->
     <section class="projects" id="projects">
-        <h2 class="projects-title">Some of my Recent Projects</h2>
+        <h2 class="projects-title">Some of my Recent Project</h2>
         <div class="projects-container">
             <div class="project-container project-card">
                 <img src="assets/images/robo.jpg" alt="semi-automatic-robo" loading="lazy" class="project-pic" />
