minor spell changes

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <div class="projects-container">
             <div class="project-container project-card">
                 <img src="assets/images/robo.jpg" alt="semi-automatic-robo" loading="lazy" class="project-pic" />
-                <h3 class="project-title">Semi automatic Tennis ball collector Robot</h3>
+                <h3 class="project-title">Semi automatic Tennis Ball collector Robot</h3>
                 <p class="project-details">
                     Robot moves around the tennis court and collects only tennis balls from the court, and depost the collected tennis balls in the collection.
                 </p>
