--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 <p class="project-details">
                     Robot moves around the tennis court and collects only tennis balls from the court, and depost the collected tennis balls in the collection.
                 </p>
-                <a href="#" target="_blank" class="project-link"> Check it Out</a>
+                <!-- <a href="#" target="_blank" class="project-link"> Check it Out</a> -->
             </div>
             <div class="project-container project-card">
                 <img src="assets/images/contact.jpg" alt="Contact Tracing" loading="lazy" class="project-pic" />
@@ -108,7 +108,7 @@
                 <p class="project-details">
                     This project was more about documentation and research, where we worked on discovering those bugs where people were concerned at it drew very quick attention to the public because of privacy.
                 </p>
-                <a href="#" target="_blank" class="project-link"> Check it Out</a>
+                <!-- <a href="#" target="_blank" class="project-link"> Check it Out</a> -->
             </div>
             <div class="project-container project-card">
                 <img src="assets/images/lift.jpg" alt="No physical contact in the lift" loading="lazy" class="project-pic" />
@@ -116,7 +116,7 @@
                 <p class="project-details">
                     This project was more based on documentation, where our team was assigned a task to develop a lift where users have minimum/ no physical contact with the lift.
                 </p>
-                <a href="#" target="_blank" class="project-link">Check it Out</a>
+                <!-- <a href="#" target="_blank" class="project-link"> Check it Out</a> -->
             </div>
         </div>
     </section>
