--- a/index.html
+++ b/index.html
@@ -40,12 +40,13 @@
     <!--Hero Section-->
 
     <section class="hero" id="about">
-        <img src="assets/images/ppp.svg" alt="rupesh-shrestha" loading="lazy" class="hero-img" />
+        <img src="assets/images/rupesh.jpg" alt="rupesh-shrestha" loading="lazy" class="hero-img" />
         <div class="bio animate_animated animate_shakeX">
             <h2 class="bio-title">About Me</h2>
             <p class="bio-text">
-                Thank you for scrolling down over my profile.. <br> Hello 👋👋👋. Enthusiastic about software and its role in this technological era and committed to acknowledge dominance of software in this modern digital age. It has always motivated
-                and self-driven me to dedicate myself to bring a weighty change in the lifestyles of people through software.
+                Thank you for scrolling down over my profile.. <br>Seeking Internship || Software Engineering (Honours) Student || Virtual Software Engineer Intern at JP Morgan || Consulting Intern (Virtual) at Practera || Java, Python, Javascript, HTML,
+                SQL
+
             </p>
         </div>
     </section>
@@ -53,13 +54,29 @@
     <!--More About-->
     <section class="more-about">
         <h2>More About Me</h2><br>
-        <p> Seeking a position to utilise my skills and abilities and achieve professional growth while being resourceful, innovative and flexible. To add valuable assets to your esteemed organization as an active member.
+        <p> It's great to meet you. I'm currently looking for a software engineering internship. If you think I could be a good fit for your team, I'd love to chat with you ☕
         </p><br>
-        <p>
-            I am looking for an company where I can apply and enhance my knowledge and explore the industry and work smart to make purposeful changes for the community. I am currently seeking an opportunity as a Software Development/ Programmer internship role to
-            apply my knowledge and experience as well as pursue my career goal. I want invest my time where I can work along side with like-minded and smart people as a team to bring a positive and purposeful impact in the community with my strong problem
-            solving passion.
-        </p>
+        <div>
+            <div>
+                <h3>Summary</h3>
+                <br> Penultimate year Software Engineering student with 8+ months of software engineering and consulting experience, including as a Software Engineer Intern with the Blood Connect App, JPMorgan Chase & Co (Virtual), and Lyft (Virtual),
+                and as a Consulting Intern (Virtual) with Practera. I also have 3+ years of customer service experience, serving 10,000+ customers.
+            </div>
+            <br/>
+            <br/>
+            <div>
+                <h3>Technical Skills</h3>
+
+                <ul>
+                    <li><span class="tech_skills">Programming:</span> Java, Python, JavaScript, C, HTML, CSS, Scala</li>
+                    <li><span class="tech_skills">Database:</span> MYSQL, SQL, SQL server, PostgreSQL</li>
+                    <li><span class="tech_skills">Cloud:</span> Azure.</li>
+                    <li><span class="tech_skills">Operating System:</span> Windows, MacOS</li>
+                    <li><span class="tech_skills">Source Control:</span> GitHub, Bitbucket, Git</li>
+                    <li><span class="tech_skills">Project Management:</span> Confluence, Jira, Trello</li>
+                </ul>
+            </div>
+            </p>
     </section>
 
     <!--Education-->
@@ -68,9 +85,11 @@
         <h3>BACHELOR OF SOFTWARE ENGINEERING(HONOURS)</h3>
         <h2><strong>Macquaire University</strong></h2>
         <p>I studied Software Engineering Honors at Macquaire University. Here, I have gained strong knowledge a wide variety of topics including data structures, algorithms, programming and project management.</p><br>
+        <p>Alorithm and data structure, Object oriented Programming, Web Development</p>
         <h3>DIPLOMA OF INFORMATION TECHNOLOGY</h3>
         <h2><strong>Macquaire University</strong></h2>
-        <p>I studied Diploma in Information Technology at Macquaire University. Here, I have gained knowledge a wide variety of topics including networking and programming.</p><br>
+        <p>I studied Diploma in Information Technology at Macquaire University. Here, I have gained knowledge a wide variety of topics including networking and programming.</p>
+        <p>SQL, Game Design</p>
     </Section>
 
     <!--Skills section-->
@@ -78,12 +97,20 @@
         <h2 class="skill-header">My Top Skills</h2>
         <div class="skills-wrapper">
             <div class="first-set animate_animated animate_pulse">
-                <img src="assets/icons/icons8-html-5.svg" alt="" loading="lazy" class="icon icon-card" />
-                <img src="assets/icons/icons8-css3.svg" alt="" loading="lazy" class="icon icon-card" />
-                <img src="assets/icons/icons8-javascript.svg" alt="" loading="lazy" class="icon icon-card" />
+                <figure>
+                    <img src="assets/icons/icons8-html-5.svg" alt="" loading="lazy" class="icon icon-card" />
+
+                    <img src="assets/icons/icons8-css3.svg" alt="" loading="lazy" class="icon icon-card" />
+
+
+                    <img src="assets/icons/icons8-javascript.svg" alt="" loading="lazy" class="icon icon-card" />
+
+
             </div>
             <div class="second-set animate__animated animate__pulse">
+
                 <img src="assets/icons/java.svg" alt="" loading="lazy" class="icon icon-card" />
+
                 <img src="assets/icons/icons8-python.svg" alt="" loading="lazy" class="icon icon-card" />
                 <img src="assets/icons/icons8-git.svg" alt="" loading="lazy" class="icon icon-card" />
             </div>
@@ -100,7 +127,7 @@
                 <p class="project-details">
                     Robot moves around the tennis court and collects only tennis balls from the court, and depost the collected tennis balls in the collection.
                 </p>
-                <a href="#" target="_blank" class="project-link"> Check it Out</a>
+                <!--<a href="#" target="_blank" class="project-link"> Check it Out</a>-->
             </div>
             <div class="project-container project-card">
                 <img src="assets/images/contact.jpg" alt="Contact Tracing" loading="lazy" class="project-pic" />
@@ -108,7 +135,7 @@
                 <p class="project-details">
                     This project was more about documentation and research, where we worked on discovering those bugs where people were concerned at it drew very quick attention to the public because of privacy.
                 </p>
-                <a href="#" target="_blank" class="project-link"> Check it Out</a>
+                <!--<a href="#" target="_blank" class="project-link"> Check it Out</a>-->
             </div>
             <div class="project-container project-card">
                 <img src="assets/images/lift.jpg" alt="No physical contact in the lift" loading="lazy" class="project-pic" />
@@ -116,7 +143,7 @@
                 <p class="project-details">
                     This project was more based on documentation, where our team was assigned a task to develop a lift where users have minimum/ no physical contact with the lift.
                 </p>
-                <a href="#" target="_blank" class="project-link">Check it Out</a>
+                <!--<a href="#" target="_blank" class="project-link"> Check it Out</a>-->
             </div>
         </div>
     </section>
